# DevlogSketcher

./: LICENSE  README.md  pyproject.toml
devlogsketcher/: __init__.py  auth.py  branches.py  cli.py  db.py  digest.py  export.py  llm.py  paths.py  planner.py  repo_tools.py  research.py  templates.py  web.py
devlogsketcher/static/: index.html
docs/: usage.md
