[project]
name = "devlogsketcher"
version = "0.1.0"
description = "Reviews a repo's git history and proposes outlined devlog / social posts to write — it outlines, it does not write."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
# AI planner/research backends live here so the core CLI stays zero-dependency.
agent = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
devlog = "devlogsketcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["devlogsketcher*"]
